# si

./: CMakeLists.txt  CONTRIBUTING.md  README.md
blog/: intricacies_of_the_allocator.md
include/compat/: compiler_features.hpp  preprocessor_features.h  sconfig.h
include/impl/ios_base/: basic_ios.hpp  ios_base.h
include/impl/iterator/: reverse_iterator.hpp
include/impl/limits/: numeric_limits.h
include/impl/log/: color.h  file_sink.h  level.h  log_builder.h  logger.h  ostream_sink.h  sink.h  stdout_sink.h
include/impl/memory/: align.hpp  allocator.h  allocator_traits.h  arena.h  arena_traits.h  next_power_of_2.hpp  next_power_of_two.hpp  offset_to_alignment.hpp
include/impl/pointer/: ptrdiff_t.h
include/impl/stddef/: nullptr_t.h  ptrdiff_t.h  size_t.h  uintptr_t.h  void_t.h
include/impl/string/: basic_string.hpp  char_traits.hpp
include/impl/type_traits/: add_const.h  add_lvalue_reference.h  add_pointer.h  add_rvalue_reference.h  add_volatile.h  conditional.h  decay.h  enable_if.h  integral_constant.h  is_arithmetic.h  is_array.h  is_class.h  is_const.h  is_enum.h  is_floating_point.h  is_function.h  is_integral.h  is_lvalue_reference.h  is_member_function_pointer.h  is_member_object_pointer.h  is_member_pointer.h  is_null_pointer.h  is_pointer.h  is_reference.h  is_referenceable.h  is_rvalue_reference.h  is_same.h  is_union.h  (+9 more)
include/si/: allocator.hpp  concepts.hpp  ios.hpp  ios_base.hpp  iterator.hpp  limits.hpp  log.hpp  memory.hpp  pointer.hpp  stddef.hpp  string.hpp  type_traits.hpp  utility.hpp  vector.hpp  vector.tpp
include/single-include/: si.hpp
local-testing/: main.cpp  test_numeric_limits  test_numeric_limits.cpp
mrs/: vector.cpp
(+2 files in other folders)
